# pygranta

./: .pre-commit-config.yaml  AUTHORS  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  README.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  versions.json
.github/: dependabot.yml
.github/workflows/: check-concurrent-workflows.yml  ci-build.yml
doc/: Makefile  _package_list.py  list_dependencies.py
doc/source/: api.rst  conf.py  development_and_release_processes.rst  examples.rst  getting_started.rst  index.rst  links.rst  package_versions.rst  user_guide.rst
version/: index.html
version/2023.2/: .buildinfo  announcement.html  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2023.2/_sources/: api.rst.txt  index.rst.txt
version/2024.1/: .buildinfo  announcement.html  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2024.1/_sources/: api.rst.txt  examples.rst.txt
version/2024.2/: .buildinfo  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2024.2/_sources/: user_guide.rst.txt
version/2025.1/: api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  package_versions.html  search.html  searchindex.js  user_guide.html
version/2025.1/_sources/: api.rst.txt  index.rst.txt
version/2025.1/_static/: documentation_options.js  search.json
version/2025.2/: announcement.html  api.html  development_and_release_processes.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  package_versions.html  search.html  searchindex.js  user_guide.html
version/2025.2/_sources/: development_and_release_processes.rst.txt  examples.rst.txt  getting_started.rst.txt
version/2025.2/_static/: search.json
version/2026.1/: api.html  development_and_release_processes.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/2026.1.0rc0/: api.html  development_and_release_processes.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  package_versions.html  search.html  searchindex.js  user_guide.html
version/2026.1.0rc0/_static/: documentation_options.js  search.json
version/2026.1/_sources/: examples.rst.txt  package_versions.rst.txt
version/2026.1/_static/: search.json
version/dev/: .buildinfo  api.html  development_and_release_processes.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  package_versions.html  search.html  searchindex.js  user_guide.html
version/dev/_sources/: index.rst.txt  package_versions.rst.txt  user_guide.rst.txt
version/stable/: api.html  examples.html  genindex.html  getting_started.html  index.html  package_versions.html  user_guide.html
(+7 files in other folders)
