[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pygranta"
description = "Pythonic interfaces to Ansys Granta MI"
version = "2023.2.0.dev0"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
repository = "https://github.com/ansys/pygranta"
documentation = "https://grantami.docs.pyansys.com"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
  { include = "**/*.py", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
ansys-grantami-bomanalytics = "1.1.3"
ansys-grantami-bomanalytics-openapi = "1.0.0"
ansys-grantami-recordlists = "1.0.0.post1"
ansys-grantami-serverapi-openapi = "1.0.0"
