[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygranta"
description = "Pythonic interfaces to Ansys Granta MI"
version = "2026.1.0.dev0"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
maintainers = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "ansys-grantami-bomanalytics==2.4.0rc0",
  "ansys-grantami-bomanalytics-openapi==5.0.0",
  "ansys-grantami-recordlists==2.1.0rc0",
  "ansys-grantami-jobqueue==1.3.0rc0",
  "ansys-grantami-serverapi-openapi==5.1.0",
  "ansys-grantami-dataflow-extensions==0.2.0; sys_platform == 'win32'",
]

[dependency-groups]
doc = [
  "sphinx>=8.1.3,<8.2.0",
  "ansys-sphinx-theme>=1.0.4",
  "sphinx-copybutton>=0.5.0",
  "sphinx-design>=0.6.0",
  "sphinx-jinja>=2.0.2",
  "toml>=0.10.2",
]

[project.urls]
documentation = "https://grantami.docs.pyansys.com"
repository = "https://github.com/ansys/pygranta"

[tool.hatch.build.targets.wheel]
packages = ["src/pygranta"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
